--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-open-weather": "^1.3.0"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
