--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "framer-motion": "^7.5.3",
     "gatsby": "^4.24.4",
     "gatsby-plugin-breakpoints": "^1.3.7",
     "gatsby-plugin-image": "^2.24.0",
@@ -16,6 +17,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-intersection-observer": "^9.4.0",
+    "react-on-visible": "^1.6.0",
     "react-open-weather": "^1.3.0"
   },
   "devDependencies": {
