--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^7.5.3",
     "gatsby": "^4.24.4",
     "gatsby-plugin-breakpoints": "^1.3.7",
+    "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-sharp": "^4.24.0",
