--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.1.0",
     "react-intersection-observer": "^9.4.0",
     "react-on-visible": "^1.6.0",
-    "react-open-weather": "^1.3.0"
+    "react-open-weather": "^1.3.0",
+    "react-scrollmagic": "^2.3.0"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
